--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ testfile.txt
 encryptedfile.dun
 src/__pycache__/image_process.cpython-312.pyc
 *.dun
+src/__pycache__/image_process.cpython-313.pyc
+decry.txt
+tests/test.txt
+/tests
